update exception controller, unit test name